--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,9 @@
     <%= form.label :body %>
     <%= form.text_area :body %>
   </div>
+   <div class="field">
+    <%= form.number_field :user_id, value:current_user.id, type: :hidden %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
