--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,18 +2,25 @@
 
 <h1>Posts</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
+      <% if user_signed_in?%>
+        <th>author</th>
+      <%end%>
       <th>Title</th>
       <th>Body</th>
       <th colspan="3"></th>
+
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <% if user_signed_in?%>
+          <td><%= current_user.email %></td>
+        <%end%>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
         <td><%= link_to 'Show', post %></td>
