Add correct_user method && add field to devise

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,22 @@
-<%= form_with(model: post) do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% post.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<div class=" card">
+  <div class="card-body">
+    <%= form_with(model: post) do |form| %>
+    <div class="field form-group" >
+      <%= form.label :title %>
+      <%= form.text_field :title,class:'form-control' %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-   <div class="field">
-    <%= form.number_field :user_id, value:current_user.id, type: :hidden %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+    <div class="field form-group">
+      <%= form.label :body %>
+      <%= form.text_area :body ,class:'form-control'%>
+    </div>
+    <div class="field">
+      <%= form.number_field :user_id, value:current_user.id, type: :hidden %>
+    </div>
+    <br/>
+    <div class="actions">
+      <%= form.submit class:'btn btn-primary' %>
+    </div>
+    <% end %>
+    </div>
+</div>
