--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>MembersOnly</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+       <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- Required meta tags -->
@@ -15,8 +17,6 @@
   </head>
   <body>
     <%= render 'posts/nav' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <%= yield %>
 
     <!-- Optional JavaScript; choose one of the two! -->
