--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Post</h1>
-
-<%= render 'form', post: @post %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="container card">
+  <div class="card-header">
+    <h4>Editing Post</h4>
+  </div>
+  <div class="card-body">
+   <%= render 'form', post: @post %>
+   <%= link_to 'Show', @post%> 
+   <%= link_to 'Back', posts_path%>
+  </div>
+ 
+</div>
