--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,36 +1,28 @@
-<p id="notice"><%= notice %></p>
+<% if notice%>
+    <div class="alert alert-warning" role="alert">
+    <%= notice %>
+    </div>
+<% end %>
+<div class="container w-50">
+ <% @posts.each do |post| %>
+    <div class="card my-2">
+      <div class="card-header">
+        <% if user_signed_in? %>
+           <%= @user.find(post.user_id).user_name %> | 
+        <% end %>
+        <%= post.title %>
+      </div>
+      <div class="card-body">
+        <%= post.body %>
+        <div>
+          <i class="far fa-eye"></i><%= link_to 'show', post %>
+          <i class="far fa-edit"> <%= link_to 'Edit', edit_post_path(post) %></i>
+          <i class="fas fa-trash-alt"><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></i>
+        </div>
+      </div>
+    </div>
+<% end %>
+<%= link_to 'New Post', new_post_path,class:'btn btn-primary my-1' %>
+</div>
 
-<h1>Posts</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <% if user_signed_in?%>
-        <th>author</th>
-      <%end%>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <% if user_signed_in?%>
-          <td><%= current_user.email %></td>
-        <%end%>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
