--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Post</h1>
+<% if notice%>
+    <div class="alert alert-warning" role="alert">
+    <%= notice %>
+    </div>
+<% end %>
+<div class="container">
 
-<%= render 'form', post: @post %>
+</div>
 
-<%= link_to 'Back', posts_path %>
+<div class=" container card">
+  <div class="card-header">
+    <h4>New post</h4>
+  </div>
+  <div class="card-body">
+    <%= render 'form', post: @post %>
+    <%= link_to 'Back', posts_path %>
+  </div>
+</div>
