--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,16 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<% if notice%>
+    <div class="alert alert-warning" role="alert">
+    <%= notice %>
+    </div>
+<% end %>
+<div class="card container w-50">
+  <div class="card-header">
+    <%= @post.title %>
+  </div>
+  <div class="card-body">
+    <%= @post.body %>
+    <br>
+    <%= link_to 'Edit', edit_post_path(@post) %> |
+    <%= link_to 'Back', posts_path %>
+  </div>
+</div>
