--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,9 +7,7 @@
  <% @posts.each do |post| %>
     <div class="card my-2">
       <div class="card-header">
-        <% if user_signed_in? %>
-           <%= @user.find(post.user_id).user_name %> | 
-        <% end %>
+          <%=signedin(post.user_id)%> |
         <%= post.title %>
       </div>
       <div class="card-body">
